--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -1,83 +1,82 @@
 $color1: #2d7ed2;
 $color2: #38b2ff;
+$color2B: rgba(56, 178, 255, .5);
 $color3: #453ad8;
 $color5: #464646;
 $color6: #323232;
 $color7: #e6e6e6;
 $color8: #f0f0f0;
-// $color1: #a6a553;
-// $color3: #20D499;
-// $color2: #FFA826;
-// $color4: #FFCF88;
-// $color6: #2d2d2d;
 
 html {
+  // Set main text color
   color: $color6;
+  // Set main background color
   background: $color7;
-
   body {
-    /* offset-x | offset-y | blur-radius | color */
+    // offset-x | offset-y | blur-radius | color
     box-shadow: 0 10px 30px rgba(0,0,0,.3);
   }
 }
 
 header {
   h1 {
+    // Main website heading color
     color: $color7;
+    // Main website background color
     background-color: $color2;
-    /* offset-x | offset-y | blur-radius | color */
+    // offset-x | offset-y | blur-radius | color
     text-shadow: 3px 3px 0 $color6;
-//
+    // Set background image to the main heading box model
     background-image: url("../../img/backimage.jpg");
-    //
+    // Make the background image cover the h1 box
     background-size: cover;
   }
 }
 
 #myBtn {
-  color: $color7;
-  background-color: $color2;
-  /* offset-x | offset-y | blur-radius | color */
-  // text-shadow: 1px 1px 0 $color5;
-}
-
-#myBtn:hover {
-    /* Add a dark-grey background on hover */
-  background-color: $color1;
+  // Set back-to-top background color
+  background-color: $color2B;
+  &:hover {
+    // Set hover state background color
+    background-color: $color1;
+  }
 }
 
 nav {
+  // Set navbar background color
   background-color: $color1;
-
   li {
+    // Set navbar items bottom border and values
     border-bottom: groove 2px $color5;
-
     a {
       text-decoration: none;
+      // Set navbar text color
       color: $color7;
-      text-shadow: 1px 1px 0 $color5;
     }
-
     &:hover {
+      // Set hover state bottom border color
       border-bottom: groove 2px $color2;
     }
   }
 }
 
-section {
+article {
+  // Set border and values for all articles
   border-right: groove 2px $color8;
   border-left: groove 2px $color8;
-  /* offset-x | offset-y | blur-radius | spread-radius | color */
+  // offset-x | offset-y | blur-radius | spread-radius | color
   box-shadow: 1px 1px 3px 1px $color5;
 
   &:hover {
+    // Set border hover state and values for all articles
     border-right: groove 2px $color2;
     border-left: groove 2px $color2;
   }
 
   .example-box {
+    // Set border and values for article example box
     border: 1px groove $color8;
+    // Set background for the article example box
     background: $color8;
-    // box-shadow: 1px 1px 1px $color5;
   }
 }
