--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -106,6 +106,8 @@ nav ul {
 
 @media only screen and (max-width: 580px) {
   header > h1 {
+    // Remove h1 top margin style
+    margin-top: 0;
     // Set height of main website heading/image
     padding: $spacing-largest 0;
   }
@@ -140,6 +142,8 @@ nav ul {
 @media only screen and (min-width: 581px),
   only screen and (min-width: 700px) and (orientation: landscape) {
   header > h1 {
+    // Remove h1 top margin style
+    margin-top: 0;
     // Set height of main website heading/image
     padding: $spacing-largest 0;
   }
@@ -148,7 +152,7 @@ nav ul {
     margin-top: $spacing-normal;
   }
   nav ul {
-    // Set nav menu to 3 columns, each 80px wide
+    // Set nav menu to 6 columns, each 80px wide
     grid-template-columns: repeat(6, 80px);
     // Set nav menu items column gap to 10px
     grid-column-gap: 10px;
@@ -173,6 +177,9 @@ nav ul {
 
 @media only screen and (min-width: 1023px) {
   header > h1 {
+    // Remove h1 top margin style
+    margin-top: $spacing-large;
+    // Set height of main website heading/image
     padding: $spacing-largest * 2 0;
   }
   div > h2 {
@@ -180,7 +187,7 @@ nav ul {
     margin-top: $spacing-normal;
   }
   nav ul {
-    // Set nav menu to 3 columns, each 80px wide
+    // Set nav menu to 6 columns, each 80px wide
     grid-template-columns: repeat(6, 80px);
     // Set nav menu items column gap to 10px
     grid-column-gap: 20px;
