--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -34,10 +34,20 @@ header {
 }
 
 #myBtn {
-  // Set back-to-top background color
+  // Set to-top button text color
+  color: $color8;
+  // Set to-top background color
   background-color: $color2B;
+  // Load to-top background image
+  background-image: url("../../img/bkbutton-v5w.gif");
+  // Set background image size
+  background-size: 35px;
+  // Disable default image repeat
+  background-repeat: no-repeat;
+  // Position image to the center
+  background-position: center;
   &:hover {
-    // Set hover state background color
+    // Set hover background color
     background-color: $color1;
   }
 }
