tweaked background image

--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -27,7 +27,7 @@ header {
     // offset-x | offset-y | blur-radius | color
     text-shadow: 3px 3px 0 $color6;
     // Set background image to the main heading box model
-    background-image: url("../../img/backimage.jpg");
+    background-image: url("../../img/backimage2.jpg");
     // Make the background image cover the h1 box
     background-size: cover;
   }
