Added scss mixin for the hover and focus code. Commented the code too.

--- a/styles/scss/_sizes.scss
+++ b/styles/scss/_sizes.scss
@@ -48,6 +48,7 @@ body {
 }
 
 h1 {
+  -webkit-font-smoothing: antialiased;
   // Set font weight of the website heading
   font-weight: $font-weight-bolder;
 }
