--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 $color1: #2d7ed2;
 $color2: #38b2ff;
 $color2B: rgba(56, 178, 255, .5);
@@ -46,7 +48,8 @@ header {
   background-repeat: no-repeat;
   // Position image to the center
   background-position: center;
-  &:hover {
+
+  @include hoverNfocus() {
     // Set hover background color
     background-color: $color1;
   }
@@ -63,7 +66,8 @@ nav {
       // Set navbar text color
       color: $color7;
     }
-    &:hover {
+
+    @include hoverNfocus() {
       // Set hover state bottom border color
       border-bottom: groove 2px $color2;
     }
@@ -77,7 +81,7 @@ article {
   // offset-x | offset-y | blur-radius | spread-radius | color
   box-shadow: 1px 1px 3px 1px $color5;
 
-  &:hover {
+  @include hoverNfocus() {
     // Set border hover state and values for all articles
     border-right: groove 2px $color2;
     border-left: groove 2px $color2;
