--- a/styles/scss/_sizes.scss
+++ b/styles/scss/_sizes.scss
@@ -63,7 +63,7 @@ h1 {
   font-weight: $font-weight-bolder;
 }
 
-#myBtn {
+#bckBtn {
   // Set to-top button font size
   font-size: $spacing-small;
   // Set to-top button font weight
