--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -41,7 +41,7 @@ header {
 }
 
 #menuBtnDiv {
-  background-image: url("/img/menuIcon.png");
+  background-image: url("../../img/menuIcon.png");
   // Set background image size
   background-size: 20px;
   // Disable default image repeat
