--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -26,8 +26,8 @@ body {
 nav {
   li {
     // Separate menu items from background
-    margin: $spacing-smaller;
-    padding: $spacing-smaller;
+    margin: $spacing-smaller / 2;
+    padding: $spacing-smaller/2;
   }
   a {
     // Allow menu item to be epandable
@@ -100,6 +100,14 @@ article {
   }
   nav {
     display: none;
+    li {
+      // Separate menu items from background
+      margin: $spacing-normal;
+      padding: $spacing-normal/2;
+    }
+  }
+  .navWrapper {
+    padding: 5px;
   }
   .navWrapper > button {
     display: block;
@@ -110,9 +118,7 @@ article {
   .menuBtnDiv > a {
     display: block;
   }
-  .navWrapper {
-    padding: 5px;
-  }
+
   nav ul {
     li {
       background-color: $color2B;
@@ -146,10 +152,13 @@ article {
     padding: $spacing-largest 0;
   }
 
+  nav {
+    display: block;
+  }
+
   .navWrapper > button {
     display: none;
   }
-
 
   div > h2 {
     // Set margin of all global articles
