Animated the show mobile menu button

--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -40,19 +40,19 @@ header {
   background-color: $color1;
 }
 
-#menuBtnDiv {
-  background-image: url("../../img/menuIcon.png");
-  // Set background image size
-  background-size: 20px;
-  // Disable default image repeat
-  background-repeat: no-repeat;
-  // Position image to the center
-  background-position: center;
-  //
-  background-color: $color7;
-  //
-  border: none;
-}
+// #menuBtnDiv {
+//   background-image: url("../../img/menuIcon.png");
+//   // Set background image size
+//   background-size: 20px;
+//   // Disable default image repeat
+//   background-repeat: no-repeat;
+//   // Position image to the center
+//   background-position: center;
+//   //
+//   background-color: $color7;
+//   //
+//   border: none;
+// }
 
 nav {
   li {
