--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -97,10 +97,69 @@ article {
 }
 
 @media only screen and (max-width: 580px) {
-
   header {
-        flex-direction: column-reverse;
+    flex-direction: column-reverse;
   }
+
+  #mobileMenuDiv {
+    margin: $spacing-smaller;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    /* background color */
+    background: #ccc;
+    border-radius: $spacing-smaller;
+  }
+
+  .hamMenu {
+    width: 27px;
+    height: 5px;
+    background: $color6;
+    position: absolute;
+    top: 45%;
+    left: 15%;
+    transition: 0.25s;
+    transition-delay: 0.25s;
+  }
+  .hamMenu:before,
+  .hamMenu:after {
+    content: "";
+    position: absolute;
+    width: 27px;
+    height: 5px;
+    background: $color6;
+    transition: 0.25s;
+    transition-delay: 0.15s;
+  }
+
+  .hamMenu:before {
+    top: -10px;
+  }
+
+  .hamMenu:after {
+    top: 10px;
+  }
+
+  .active .hamMenu {
+    // middle of menu
+    background: rgba(0, 0, 0, 0);
+    transition: 0.25s;
+  }
+
+  .active .hamMenu:before,
+  .active .hamMenu:after {
+    top: 0;
+  }
+
+  .active .hamMenu:before {
+    transform: rotate(45deg);
+  }
+
+  .active .hamMenu:after {
+    transform: rotate(-45deg);
+  }
+
 
   header > h1 {
     // Remove h1 top margin style
@@ -123,18 +182,7 @@ article {
   .navWrapper {
     padding: 5px;
   }
-
-  // .navWrapper > button {
-  //   display: block;
-  //   width: $spacing-large;
-  //   height: $spacing-large;
-  //   margin: $spacing-smaller;
-  // }
-  // .menuBtnDiv > a {
-  //   display: block;
-  // }
-
-  #dIcon {
+  #mobileMenuDiv {
     display: block;
   }
 
@@ -168,10 +216,9 @@ article {
 
 @media only screen and (min-width: 581px),
   only screen and (min-width: 700px) and (orientation: landscape) {
-    header {
-          flex-direction:column;
-    }
-
+  header {
+    flex-direction: column;
+  }
   header > h1 {
     // Remove h1 top margin style
     margin-top: 0;
@@ -183,15 +230,9 @@ article {
   nav {
     display: block !important;
   }
-
-  // .navWrapper > button {
-  //   display: none;
-  // }
-
-  #dIcon {
+  #mobileMenuDiv {
     display: none;
   }
-
   div > h2 {
     // Set margin of all global articles
     margin-top: $spacing-normal;
@@ -276,57 +317,3 @@ article {
 }
 
 // EXPEREMENTAL
-
-.icon {
-  margin: $spacing-smaller;
-  position: relative;
-  width: 43px;
-  height: 43px;
-  cursor: pointer;
-  /* background color */
-  background: #ccc;
-}
-
-.hamMenu {
-  width: 30px;
-  height: 5px;
-  background: $color6;
-  position: absolute;
-  top: 45%;
-  left: 15%;
-  transition: .25s;
-  transition-delay: 0.25s;
-}
-.hamMenu:before,.hamMenu:after {
-  content: "";
-  position: absolute;
-  width: 30px;
-  height: 5px;
-  background: $color6;
-  transition: .25s;
-  transition-delay: 0.15s;
-}
-
-.hamMenu:before {
-  top: -11px;
-}
-
-.hamMenu:after {
-  top: 11px;
-}
-
-.active .hamMenu {
-  // middle of menu
-  background: rgba(0,0,0,0);
-  transition: .25s;
-}
-
-.active .hamMenu:before {
-  top:0;
-  transform: rotate(45deg);
-}
-
-.active .hamMenu:after {
-  top:0;
-  transform: rotate(-45deg);
-}
