Testing performance on mobile without shadows.

--- a/styles/scss/_theme.scss
+++ b/styles/scss/_theme.scss
@@ -16,7 +16,9 @@ html {
   background: $color7;
   body {
     // offset-x | offset-y | blur-radius | color
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+
+    //Enable this for descktops only.
+    // box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -26,8 +28,11 @@ header {
     color: $color7;
     // Main website background color
     background-color: $color2;
+
+    //Enable this for descktops only.
     // offset-x | offset-y | blur-radius | color
-    text-shadow: 3px 0 0 $color6;
+    //text-shadow: 3px 0 0 $color6;
+
     // Set background image to the main heading box model
     background-image: url("../../img/backimage2.jpg");
     // Make the background image cover the h1 box
@@ -68,8 +73,10 @@ article {
   // Set border and values for all articles
   border-right: groove 2px $color8;
   border-left: groove 2px $color8;
+
+  //Enable this for descktops only.
   // offset-x | offset-y | blur-radius | spread-radius | color
-  box-shadow: 1px 1px 3px 1px $color5;
+  //box-shadow: 1px 1px 3px 1px $color5;
 
   @include hoverNfocus() {
     // animation: keyframeName | duration | transitions | delay | last keyframe
